--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
     <div class="col-md-8 text-center">
 
       <!-- Titre principal -->
+  <div class="d-flex flex-column justify-content-center align-items-center" style="height: 50vh;">
     <div class="animated-heading theme-light">
       <h1 class="display-4 fw-bold mb-4">
           <span>Bienvenue</span>
@@ -33,4 +34,5 @@
 
     </div>
   </div>
+</div>
 </div>
