--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,6 +21,8 @@
           <li class="nav-item">
             <%= link_to "Programmes", programs_path, class: "nav-link" %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Tableau de bord", profile_path, class: "nav-link" %>
         <% end %>
       </ul>
 
@@ -44,7 +46,6 @@
           </a>
           <div class="dropdown-menu dropdown-menu-end">
             <%= link_to "Profil", edit_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Tableau de bord", profile_path, class: "dropdown-item" %>
             <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
           </div>
         </div>
