--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container" data-controller="chat">
+<div class="container row justify-content-center" data-controller="chat">
   <div class="col-8">
     <h2 class="mt-2 mb-3"><%= @exercise.title %></h2>
     <p><%= @exercise.content %></p>
@@ -8,29 +8,29 @@
   <div id="messages_container"
        data-chat-target="messages" class="overflow-auto col-8 border border-light rounded py-3 mb-3" style="height: 60vh">
     <div class="container col6 d-flex justify-content-start">
-      <p class="w-auto py-2 px-5 bg-warning text-dark rounded">Votre réponse ?</p>
+      <p class="chatbot w-auto py-2 px-5 text-dark rounded">Votre réponse ?</p>
     </div>
 
     <% @chat.messages.each do |message| %>
       <% if message.role == "user" %>
         <div class="container col6 d-flex justify-content-end">
-          <p class="my-3 py-2 px-5 bg-success rounded"><%= message.content %></p>
+          <p class="chatuser my-3 py-2 px-5 rounded"><%= message.content %></p>
         </div>
       <% else %>
         <div class="container col6 d-flex justify-content-start text-dark messageIA">
-          <span class="mb-3 py-2 px-5 bg-warning text-dark rounded"><%=message.content%></span>
+          <span class="chatbot mb-3 py-2 px-5 text-dark rounded"><%=message.content%></span>
         </div>
       <% end %>
     <% end %>
   </div>
 
-  <div class="col-8" data-chat-target="form">
+  <div class="col-8 p-0" data-chat-target="form">
     <% if @chat.messages.where(role: "assistant").count < 3 %>
       <div id="new_message_container">
         <%= simple_form_for [@chat, @message] do |f| %>
           <div class="d-flex">
             <%= f.input_field :content, placeholder: "Ecris ici ...", id: "chat_input", data: { chat_target: "input" }, class: "form-control w-75 me-2" %>
-            <%= f.button :submit, 'Envoyer', class: 'btn btn-primary h-100' %>
+            <%= f.button :submit, 'Envoyer', class: 'w-25 me-0 theme-toggle', id: 'theme-toggle' %>
           </div>
         <% end %>
       </div>
@@ -40,13 +40,3 @@
 
 
 </div>
-
-
-<% unless @exercise.finished %>
-  <%= button_to "Exercice fait",
-    finish_exercise_path(@exercise),
-    method: :patch,
-    class: "btn btn-primary btn-sm" %>
-<% else %>
-  <p>L’exercice est terminé ✔</p>
-<% end %>
