--- a/app/assets/stylesheets/components/_theme_toggle.scss
+++ b/app/assets/stylesheets/components/_theme_toggle.scss
@@ -188,6 +188,7 @@ body.theme-dark {
   background-color: #ffffff;
   color: #212529;
   border-color: #ccc;
+  text-decoration: none;
 }
 
 .theme-light .theme-toggle:hover {
@@ -198,6 +199,7 @@ body.theme-dark {
   background-color: #2c2c2c;
   color: #f1f1f1;
   border-color: #555;
+  text-decoration: none;
 }
 
 .theme-dark .theme-toggle .btn {
