--- a/app/assets/stylesheets/components/_theme_toggle.scss
+++ b/app/assets/stylesheets/components/_theme_toggle.scss
@@ -94,7 +94,7 @@ body.theme-light {
 .theme-dark h5,
 .theme-dark h6 {
   transition: color 0.8s ease;
-  color: #121212;
+  color: #f1f1f1;
 }
 
 .theme-dark a {
