--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -22,7 +22,7 @@
               program_path(program),
               data: { turbo_method: :delete, turbo_confirm: "Êtes-vous sûr ?" },
               class: "theme-toggle" , id: "theme-toggle"%>
-            <%= button_to "Voir", program_path(program), class: "theme-toggle mt-4", id: "theme-toggle" %>
+            <%= link_to "Voir", program_path(program), class: "theme-toggle p-3 fs-6 text-decoration-none", id: "theme-toggle" %>
 
           </div>
 
